--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -71,17 +71,17 @@
     "\n",
     "# 2. Write a query that filters the Measurement table to\n",
     "# retrieve the temperatures for the month of June.\n",
-    "results = []\n",
-    "results = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "results_june = []\n",
+    "results_june = session.query(Measurement.date, Measurement.tobs).\\\n",
     "        filter(extract('month', Measurement.date) == 6).all()\n",
     "# print(results)\n",
     "\n",
-    "print(len(results))"
+    "print(len(results_june))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -90,29 +90,29 @@
        "list"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#  3. Convert the June temperatures to a list.\n",
-    "type(results)"
+    "type(results_june)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
-    "df = pd.DataFrame(results, columns=['date', 'tobs'])"
+    "df_june = pd.DataFrame(results_june, columns=['date', 'tobs'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -188,14 +188,14 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n",
-    "df.describe()"
+    "df_june.describe()"
    ]
   },
   {
@@ -207,39 +207,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1517"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 6. Write a query that filters the Measurement table to retrieve the temperatures for the month of December.\n"
+    "# 6. Write a query that filters the Measurement table to retrieve the temperatures for the month of December.\n",
+    "results_dec = []\n",
+    "results_dec = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "        filter(extract('month', Measurement.date) == 12).all()\n",
+    "\n",
+    "len(results_dec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 7. Convert the December temperatures to a list.\n"
+    "# 7. Convert the December temperatures to a list.\n",
+    "type(results_dec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8. Create a DataFrame from the list of temperatures for the month of December. \n"
+    "# 8. Create a DataFrame from the list of temperatures for the month of December. \n",
+    "df_dec = pd.DataFrame(results_dec, columns=['date', 'tobs'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1517.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>71.041529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.745920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>56.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>71.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              tobs\n",
+       "count  1517.000000\n",
+       "mean     71.041529\n",
+       "std       3.745920\n",
+       "min      56.000000\n",
+       "25%      69.000000\n",
+       "50%      71.000000\n",
+       "75%      74.000000\n",
+       "max      83.000000"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 9. Calculate and print out the summary statistics for the Decemeber temperature DataFrame.\n",
+    "df_dec.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 9. Calculate and print out the summary statistics for the Decemeber temperature DataFrame.\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
